--- a/References.bib
+++ b/References.bib
@@ -166,7 +166,7 @@
 }
 
 @Book{Cengel2011,
-  title     = {Heat and Mass Transfer-fundamentals and Applications},
+  title     = {Heat and Mass Transfer -- Fundamentals and Applications},
   publisher = {McGraw-Hill},
   year      = {2011},
   author    = {Yunus A. Cengel and Afshin J. Ghajar},
@@ -185,7 +185,7 @@
 
 @Article{Chen2006,
   author  = {Chen, Xiao and Zhang, Guoqiang and Peng, Jiangua and Lin, Xuanjun and Liu, Tingting},
-  title   = {The Performance of an Ppen-loop Lake Water Heat Pump System in South {China}},
+  title   = {The Performance of an Open-loop Lake Water Heat Pump System in South {China}},
   journal = {Applied Thermal Engineering},
   year    = {2006},
   volume  = {26},
@@ -194,7 +194,7 @@
 
 @Article{Chenoweth1990,
   author  = {J. M. Chenoweth},
-  title   = {Final Report of the Htri/tema Joint Committee to Review the Fouling Section of the Tema Standards},
+  title   = {Final Report of the {HTRI/TEMA} Joint Committee to Review the Fouling Section of the {TEMA} Standards},
   journal = {Heat Transfer Engineering},
   year    = {1990},
   volume  = {11},
@@ -233,7 +233,7 @@
 
 @Article{Chow2004,
   author  = {Chow, T. T. and Au, W. H. and Yau, Raymond and Cheng, Vincent and Chan, Apple and Fong, K. F.},
-  title   = {Applying District-cooling Technology in Hong Kong},
+  title   = {Applying District-cooling Technology in {Hong Kong}},
   journal = {Applied Energy},
   year    = {2004},
   volume  = {79},
@@ -271,7 +271,7 @@
 
 @Article{CIMMINO2014641,
   author   = {Massimo Cimmino and Michel Bernier},
-  title    = {A Semi-analytical Method to Generate G-functions for Geothermal Bore Fields},
+  title    = {A Semi-analytical Method to Generate g-functions for Geothermal Bore Fields},
   journal  = {International Journal of Heat and Mass Transfer},
   year     = {2014},
   volume   = {70},
@@ -347,7 +347,7 @@
 
 @Article{Doherty1986,
   author  = {Doherty, Francis G. and Farris, Jerry L. and Cherry, Donald S. and Cairns Jr., John},
-  title   = {Control of the Freshwater Fouling Bivalve Corbicula Fluminea by Halogenation},
+  title   = {Control of the Freshwater Fouling Bivalve {\textit{Corbicula fluminea}} by Halogenation},
   journal = {Archives of Environmental Contamination and Toxicology},
   year    = {1986},
   volume  = {15},
@@ -360,7 +360,7 @@
   year      = {2005},
   number    = {Report 12/2005},
   address   = {Oslo, Norway},
-  publisher = {Norges Vassdrags- og Energidirektorat},
+  publisher = {Norges Vassdrags - og Energidirektorat},
   school    = {Norwegian Water Resources and Energy Directorate},
 }
 
@@ -451,7 +451,7 @@
 
 @Article{Fava1978,
   author  = {Fava, James A. and Thomas, David L.},
-  title   = {Use of Chorine to Control Otec Biofouling},
+  title   = {Use of Chorine to Control {OTEC} Biofouling},
   journal = {Ocean Engineering},
   year    = {1978},
   volume  = {5},
@@ -482,7 +482,7 @@
 @Electronic{Friotherm2012,
   author    = {Friotherm},
   year      = {2012},
-  title     = {High Demand for District Cooling and Heating in Stockholm - 4 Unitiop 33/28cpy for the Nimrod Power Station},
+  title     = {High Demand for District Cooling and Heating in {Stockholm} - 4 Unitiop 33/28cpy for the {Nimrod} Power Station},
   url       = {http://www.friotherm.com/downloads/nimrod\_e009\_uk.pdf},
   publisher = {Friotherm},
 }
@@ -490,7 +490,7 @@
 @Electronic{Friotherm2012a,
   author    = {Friotherm},
   year      = {2012},
-  title     = {5 Unitiop 50fy Heat Pump/chiller Units Simultaneously Generate 90 Mw Heat Energy and 60 Mw Chilled Water},
+  title     = {5 Unitiop 50fy Heat Pump/chiller Units Simultaneously Generate 90 {MW} Heat Energy and 60 {MW} Chilled Water},
   url       = {http://www.friotherm.com/downloads/katri\_vala\_e012\_uk.pdf},
   publisher = {Friotherm},
 }
@@ -498,7 +498,7 @@
 @Electronic{Friotherm2012b,
   author    = {Friotherm},
   year      = {2012},
-  title     = {Invisible Refrigeration Plant Is Cooling the Centre of Paris},
+  title     = {Invisible Refrigeration Plant Is Cooling the Centre of {Paris}},
   address   = {Winterthur, Switzerland},
   url       = {http://www.friotherm.com/downloads/climespace\_e002\_uk.pdf},
   publisher = {Friotherm},
@@ -507,7 +507,7 @@
 @Electronic{Friotherm2012c,
   author    = {Friotherm},
   year      = {2012},
-  title     = {V{\"a}rtan Ropsten -- the Largest Sea Water Heat Pump Facility Worldwide, with 6 Unitop? 50fy and 180 Mw Total Capacity},
+  title     = {V{\"a}rtan Ropsten -- the Largest Sea Water Heat Pump Facility Worldwide, with 6 Unitop 50fy and 180 {MW} Total Capacity},
   address   = {Winterthur, Switzerland},
   url       = {http://www.friotherm.com/downloads/vaertan\_e008\_uk.pdf},
   publisher = {Friotherm},
@@ -515,7 +515,7 @@
 
 @Article{Gladstone1998,
   author  = {John Gladstone},
-  title   = {{John Gorrie,} the Visionary},
+  title   = {{John Gorrie}, the Visionary},
   journal = {ASHRAE Journal},
   year    = {1998},
   volume  = {40},
@@ -535,7 +535,7 @@
 
 @TechReport{Gonthier2012,
   author       = {St{\'e}phane Gonthier},
-  title        = {Geoperformx Thermally Enhanced Pipe for Geothermal Applications},
+  title        = {{GeoPerformX} Thermally Enhanced Pipe for Geothermal Applications},
   year         = {2012},
   organization = {VersaProfiles},
   url          = {http://www.igshpa.okstate.edu/membership/members\_only/proceedings/2012/10-4-2012-1030-Session-A-VERSAPROFILES\%20copy.pdf},
@@ -579,7 +579,7 @@
 
 @Article{Haldane1930,
   author  = {Haldane, T. G. N.},
-  title   = {The Heat Pump - an Economical Method of Producing Low-grade Heat from Electricity},
+  title   = {The Heat Pump - An Economical Method of Producing Low-grade Heat from Electricity},
   journal = {Journal of the Institution of Electrical Engineers},
   year    = {1930},
   volume  = {68},
@@ -589,7 +589,7 @@
 @Electronic{Hamilton2010,
   author = {Hamilton, James},
   year   = {2010},
-  title  = {46 Mw with Water Cooling at a Pue of 1.10},
+  title  = {46 {MW} with Water Cooling at a {PUE} of 1.10},
   url    = {http://perspectives.mvdirona.com},
 }
 
@@ -603,7 +603,7 @@
 
 @InProceedings{Hani2010,
   author  = {Hani, A. and Britikovski, I. and Voll, H. and K{\~o}iv, T. A.},
-  title   = {Sea Water District Cooling Feasibility Analysis for Tallinn},
+  title   = {Sea Water District Cooling Feasibility Analysis for {Tallinn}},
   year    = {2010},
   series  = {The 12\textsuperscript{th} International Symposium on District Heating and Cooling},
   pages   = {153--156},
@@ -652,7 +652,7 @@
 
 @Article{Heffernan2001,
   author  = {Heffernan, Virginia},
-  title   = {Toronto Waterfront: {Toronto} Cools off Naturally - a Deep Lake Water Cooling System},
+  title   = {{Toronto} Waterfront: {Toronto} Cools off Naturally - a Deep Lake Water Cooling System},
   journal = {Canadian Consulting Engineer},
   year    = {2001},
   volume  = {2001},
@@ -689,7 +689,7 @@
 
 @Book{Holman1984,
   title     = {Experimental Methods for Engineers Fourth Edition},
-  publisher = {McGraw Hill},
+  publisher = {McGraw-Hill},
   year      = {1984},
   author    = {Holman, J. P. and Gajda Jr, W. J.},
   address   = {New York, NY},
@@ -823,7 +823,7 @@
 
 @Book{Kays2005,
   title     = {Convective Heat and Mass Transfer 4\textsuperscript{th} Edition},
-  publisher = {McGraw-HIll},
+  publisher = {McGraw-Hill},
   year      = {2005},
   author    = {Kays, William and Crawford, Michael and Weigand, Bernhard},
   address   = {New York, NY},
@@ -907,7 +907,7 @@
 
 @InProceedings{Leraand1995,
   author    = {Leraand, T. K. and Van Ryzin, J. C.},
-  title     = {Air Conditioning with Deep Seawater: A Cost-effective Alternative for {West Beach, Oahu, H}awaii},
+  title     = {Air Conditioning with Deep Seawater: A Cost-effective Alternative for {West Beach, Oahu, Hawaii}},
   booktitle = {OCEANS '95. MTS/IEEE. Challenges of Our Changing Global Environment},
   year      = {1995},
   volume    = {2},
@@ -1029,7 +1029,7 @@
 @Electronic{Miller2011a,
   author    = {Miller, Rich},
   year      = {2011},
-  title     = {Norway's Fjord-cooled Data Center},
+  title     = {{Norway's} Fjord-cooled Data Center},
   url       = {http://www.datacenterknowledge.com},
   abstract  = {The article: A small but growing number of data centers are slashing their cooling costs by using the environment as their chiller, tapping nearby rivers, underground lakes, wells and even the Baltic Sea. A new project in Norway plans to draw cold water from an adjacent fjord and use it to cool data halls.The Green Mountain Data Center is located on the shores of the island of Rennesoy, inside concrete buildings within caves carved out of the mountain. Racks of servers will now fill underground halls that once stored ammunition for NATO.The project is being developed by the investment arm of the Norwegian shipping firm Smedvig, which is working with a leading Nordic IT services firm, ErgoGroup, and electric utility Lyse Energi.The ability to use the fjord as a low-cost source for chilled water was a major advantage of the Rennesoy location. Green Mountain's cooling system taps the fjord for a steady supply of water at 8 degrees C (46F), which is optimal for use in data center cooling systems.Chilled water is a key component of many data center cooling systems. This water is often supplied by chillers, large refrigeration units that require a hefty amount of electricity to operate. Eliminating the chillers will usually allow a data center to operate with lower energy bills than similar facilities using chillers.The Green Mountain Data Center is being built out in two phases. The first phase is designed for traditional colocation space, and will include about 7,000 square meters (about 75,000 square feet) of data center space. Another 4,000  square meters (43,000 square feet) will house data center container solutions, which will also use chilled water for cooling.The developers are in the late stages of negotiations with Norwegian clients, but believe the facility may be attractive to multi-nationals based in the U.S. and Europe. ``We are now mainly focusing on corporate customers with worldwide facilities who wish to reduce their carbon footprint across their portfolio of data centres, improve their `green credentials' and reduce spending on power,'' said Jonathan Evans of Green Mountain.The build-out of the colocation halls will begin in January, and the power to the facility is also being upgraded. Green Mountain expects the first clients to be installed in late 2012. Here's a video providing a conceptual overview of the project.},
   publisher = {Data Center Knowledge},
@@ -1129,7 +1129,7 @@
 
 @Misc{Peer2012,
   author    = {Peer, Tim},
-  title     = {Email Conversation with Author},
+  title     = {Email conversation with author},
   year      = {2012},
   address   = {Ithaca, NY},
   publisher = {Cornell University},
@@ -1168,7 +1168,7 @@
 
 @Misc{Pietrucha2012,
   author    = {Pietrucha, Ulrich},
-  title     = {Email Conversation with Author},
+  title     = {Email conversation with author},
   year      = {2012},
   address   = {Winterthur, Switzerland},
   publisher = {Friotherm},
@@ -1177,13 +1177,13 @@
 @Electronic{Polypipe2013,
   author = {Polypipe},
   year   = {2013},
-  title  = {Polypipe Potable Water ({PW) PE3408/PE3608} Pipe},
+  title  = {Polypipe Potable Water {(PW) PE3408/PE3608} Pipe},
   url    = {http://www.polypipeinc.com/admin/upload/file/B\-1005\%20HDPE\%20PE3608\%20Potable\%20Water\%20Pipe.pdf},
 }
 
 @Article{Pugh2009,
   author  = {Pugh, S. J. and Hewitt, G. F. and M{\"u}ller-Steinhagen, H.},
-  title   = {Fouling during the Use of ``fresh'' Water As Coolant - the Development of a ``user Guide''},
+  title   = {Fouling During the Use of ``Fresh'' Water As Coolant - The Development of a ``User Guide''},
   journal = {Heat Transfer Engineering},
   year    = {2009},
   volume  = {30},
@@ -1193,7 +1193,7 @@
 
 @Article{Pugh2005,
   author  = {Pugh, S. J. and Hewitt, G. F. and M{\"u}ller-Steinhagen, H.},
-  title   = {Fouling during the Use of Seawater As Coolant - the Development of a User Guide},
+  title   = {Fouling During the Use of Seawater As Coolant - the Development of a User Guide},
   journal = {Heat Transfer Engineering},
   year    = {2005},
   volume  = {26},
@@ -1203,7 +1203,7 @@
 
 @Article{Rafferty2000,
   author  = {Rafferty, Kevin},
-  title   = {Design Issues in the Commercial Application of {GSHP}systems in the {U.S.}},
+  title   = {Design Issues in the Commercial Application of {GSHP} systems in the {U.S.}},
   journal = {GHC Bulletin},
   year    = {2000},
   pages   = {6--10},
@@ -1221,7 +1221,7 @@
 
 @Book{Rauwendaal1986,
   title     = {Polymer Extrusion},
-  publisher = {Hanser Publishers},
+  publisher = {Hansen Publishers},
   year      = {1986},
   author    = {Rauwendaal, C.},
 }
@@ -1247,7 +1247,7 @@
 
 @Article{Saloranta2007,
   author  = {Saloranta, T. M. and Andersen, T.},
-  title   = {Mylake---a Multi-year Lake Simulation Model Code Suitable for Uncertainty and Sensitivity Analysis Simulations},
+  title   = {{MyLake} -- A Multi-year Lake Simulation Model Code Suitable for Uncertainty and Sensitivity Analysis Simulations},
   journal = {Ecological Modeling},
   year    = {2007},
   volume  = {207},
@@ -1275,8 +1275,8 @@
 }
 
 @Article{Seders2007,
-  author   = {Linday A. Seders and Caitlyn A. Shea and Michael D. Lemmon and Patricia A. Maurice and Jeffrey W. Talley},
-  title    = {Lakenet: An Integrated Sensor Network for Environmental Sensing in Lakes},
+  author   = {Lindsay A. Seders and Caitlyn A. Shea and Michael D. Lemmon and Patricia A. Maurice and Jeffrey W. Talley},
+  title    = {{LakeNet}: An Integrated Sensor Network for Environmental Sensing in Lakes},
   journal  = {Environmental Energy Science},
   year     = {2007},
   volume   = {24},
@@ -1315,7 +1315,7 @@
 
 @TechReport{Smebye2011,
   author    = {Smebye, Helge and Midttomme, Kirsti and Stene, Jorn},
-  title     = {{In norwegian---Energi} Fra Overflatevann I {Norge} -- Kartlegging Av {\o}konomisk Potensial},
+  title     = {{In Norwegian -- Energi} Fra Overflatevann I {Norge} -- Kartlegging Av {\o}konomisk Potensial},
   year      = {2011},
   number    = {9/2011},
   address   = {Oslo, Norway},
@@ -1559,7 +1559,7 @@
 
 @TechReport{Smith1998,
   author   = {Smith, Marvin D.},
-  title    = {Circular Pipe Ground Heat Exchangers--slinky Heat Exchanger Performance and Modeling},
+  title    = {Circular Pipe Ground Heat Exchangers -- Slinky Heat Exchanger Performance and Modeling},
   year     = {1998},
   number   = {TR-WO3024-21},
   address  = {3412 Hillview Ave. Palo Alto, CA 94304},
@@ -1579,7 +1579,7 @@
 
 @Article{Congedo2012,
   author   = {P. M. Congedo and G. Colangelo and G. Starace},
-  title    = {Cfd Simulation of Horizontal Ground Heat Exchangers: A Comparison among Different Configurations},
+  title    = {{CFD} Simulation of Horizontal Ground Heat Exchangers: A Comparison among Different Configurations},
   journal  = {Applied Thermal Engineering},
   year     = {2012},
   volume   = {33-34},
@@ -1762,7 +1762,7 @@
 
 @InProceedings{Spitler2000,
   author    = {Jeffrey D. Spitler},
-  title     = {{GLHEPro}---{A} Design Tool for Commercial Building Ground Loop Heat Exchangers},
+  title     = {{GLHEPro} -- A Design Tool for Commercial Building Ground Loop Heat Exchangers},
   booktitle = {4\textsuperscript{th} International Heat Pump in Cold Climates Conference},
   year      = {2000},
   address   = {Aylmer, Qu{\'e}bec},
@@ -1987,7 +1987,7 @@
   number   = {9},
   pages    = {2357--2367},
   issn     = {0960-1481},
-  abstract = {In this paper an improvement of the model CaRM (CApacity Resistance Model) is presented to consider the borehole thermal capacitance, both of the filling material of the borehole and of the heat carrier fluid inside the ground heat exchanger. Several models, numerical and analytical, are available in literature for short time step analyses of ground-coupled heat pump systems. According to the modelling for the surrounding ground, the new approach for the inside of the borehole is based on electrical analogy. In this study the double U-tube ground heat exchanger is analyzed. The new model has been validated by means of a commercial software based on the finite elements method as well as measurements of ground response test, using a suitable plant system. In this last comparison, the contribution of the thermal capacitance of the circulating fluid is investigated, since it is frequently neglected in short time step simulations. In both cases, there is agreement between the CaRM results and data from numerical simulations and measurements as well.},
+  abstract = {In this paper an improvement of the model CaRM (CApacity Resistance Model) is presented to consider the borehole thermal capacitance, both of the filling material of the borehole and of the heat carrier fluid inside the ground heat exchanger. Several models, numerical and analytical, are available in literature for short time step analyses of ground-coupled heat pump systems. According to the modeling for the surrounding ground, the new approach for the inside of the borehole is based on electrical analogy. In this study the double U-tube ground heat exchanger is analyzed. The new model has been validated by means of a commercial software based on the finite elements method as well as measurements of ground response test, using a suitable plant system. In this last comparison, the contribution of the thermal capacitance of the circulating fluid is investigated, since it is frequently neglected in short time step simulations. In both cases, there is agreement between the CaRM results and data from numerical simulations and measurements as well.},
   doi      = {https://doi.org/10.1016/j.renene.2011.01.032},
   keywords = {Ground heat pump systems, Vertical ground heat exchangers, Ground numerical simulation, Borehole, Borefield, Short time response},
   url      = {http://www.sciencedirect.com/science/article/pii/S0960148111000541},
@@ -2002,7 +2002,7 @@
   number   = {Supplement C},
   pages    = {358--370},
   issn     = {0306-2619},
-  abstract = {This paper makes a comparative analysis between a helical-shaped pipe and a double U-tube ground heat exchanger. The two configurations were installed at a shallow depth and studied, since a depth limit is mandatory in some areas. When installed this way, the interaction between the ground surface and the ambient environment needs to be taken into account when the thermal behaviour of the ground heat exchangers is investigated.
+  abstract = {This paper makes a comparative analysis between a helical-shaped pipe and a double U-tube ground heat exchanger. The two configurations were installed at a shallow depth and studied, since a depth limit is mandatory in some areas. When installed this way, the interaction between the ground surface and the ambient environment needs to be taken into account when the thermal behavior of the ground heat exchangers is investigated.
 A detailed numerical simulation tool was used to carry out this research. The problem of heat transfer was solved with an equivalent electrical circuit of thermal resistances and capacitances. This simulation tool was also used on a double U-tube heat exchanger in order to include axial heat conduction in the ground and the borehole.
 The two borehole heat exchangers were analyzed over both long- and short-term periods; the thermal properties of the ground, energy loads and the axial effects of weather conditions were also taken into account. Finally, a reduction in the borehole length for the helical-shaped pipe was also assessed and compared with the performance of the double U-tube.},
   doi      = {https://doi.org/10.1016/j.apenergy.2013.06.032},
@@ -2126,7 +2126,7 @@ The two borehole heat exchangers were analyzed over both long- and short-term pe
 }
 
 @Book{Doyle1997,
-  title     = {Wave Propigation in Structures: Spectral Analysis Using Fast Discrete {Fourier} Transforms},
+  title     = {Wave Propagation in Structures: Spectral Analysis Using Fast Discrete {Fourier} Transforms},
   publisher = {Springer-Verlag},
   year      = {1997},
   author    = {J. F. Doyle},
@@ -2225,7 +2225,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @InBook{JavedSpitler2016,
-  chapter   = {Calculation of borehole thermal resistance},
+  chapter   = {Calculation of Borehole Thermal Resistance},
   pages     = {63--95},
   title     = {Advances in Ground-source Heat Pump Systems},
   publisher = {Woodhead Publishing},
@@ -2453,14 +2453,14 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Conference{GodefroyLecomteBernierDouglasArmstrong2016,
   author    = {Vivien Godefroy and Corentin Lecomte and Michel Bernier and Mark Douglas and Marianne Armstrong},
-  title     = {Experimental Validation of a Thermal Reistance and Capacity Model for Geothermal Boreholes},
+  title     = {Experimental Validation of a Thermal Resistance and Capacity Model for Geothermal Boreholes},
   booktitle = {ASHRAE Winter Conference},
   year      = {2016},
   note      = {January 23--27},
 }
 
 @Book{GeoenergyModelingII2016,
-  title     = {Geoenergy Modeling Ii: Shallow Geothermal Systems},
+  title     = {{Geoenergy Modeling II: Shallow Geothermal Systems}},
   publisher = {Springer},
   year      = {2016},
   author    = {Haibing Shao and Philipp Hein and Agnes Sachse and Olaf Kolditz},
@@ -2474,7 +2474,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   journal   = {Journal of Building Performance Simulation},
   year      = {2017},
   pages     = {1--19},
-  abstract  = { A model for the simulation of geothermal systems with parallel- and series-connected boreholes is presented. Mass and heat balance problems are formulated for each component in the system and are assembled into system-level problems. A third problem is formulated to account for heat transfer in the bore field, using the finite line source solution. This third problem is coupled to the system-level heat balance problem by an analytical solution of the heat transfer inside boreholes with multiple U-tubes. The simulation model allows for any number of independent fluid loops within the bore field or within individual boreholes and allows for combinations of specified inlet fluid temperatures and heat extraction rates in independent fluid loops. The model accounts for the axial variation of the fluid and borehole wall temperatures and heat extraction rates. The capabilities of the model are demonstrated through three example simulations. },
+  abstract  = {A model for the simulation of geothermal systems with parallel- and series-connected boreholes is presented. Mass and heat balance problems are formulated for each component in the system and are assembled into system-level problems. A third problem is formulated to account for heat transfer in the bore field, using the finite line source solution. This third problem is coupled to the system-level heat balance problem by an analytical solution of the heat transfer inside boreholes with multiple U-tubes. The simulation model allows for any number of independent fluid loops within the bore field or within individual boreholes and allows for combinations of specified inlet fluid temperatures and heat extraction rates in independent fluid loops. The model accounts for the axial variation of the fluid and borehole wall temperatures and heat extraction rates. The capabilities of the model are demonstrated through three example simulations.},
   doi       = {10.1080/19401493.2017.1381993},
   eprint    = {https://doi.org/10.1080/19401493.2017.1381993},
   publisher = {Taylor \& Francis},
@@ -2654,7 +2654,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{MAGRANER20101394,
   author   = {T. Magraner and \'A. Montero and S. Quilis and J.F. Urchuegu\'ia},
-  title    = {Comparison between Design and Actual Energy Performance of a Hvac-ground Coupled Heat Pump System in Cooling and Heating Operation},
+  title    = {Comparison between Design and Actual Energy Performance of a {HVAC}-ground Coupled Heat Pump System in Cooling and Heating Operation},
   journal  = {Energy and Buildings},
   year     = {2010},
   volume   = {42},
@@ -2721,7 +2721,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{RN5,
   author  = {Doherty, P. S. and Al-Huthaili, S. and Riffat, S. B. and Abodahab, N.},
-  title   = {Ground Source Heat Pump--description and Preliminary Results of the Eco House System},
+  title   = {Ground Source Heat Pump - Description and Preliminary Results of the {Eco House} System},
   journal = {Applied Thermal Engineering},
   year    = {2004},
   volume  = {24},
@@ -2766,7 +2766,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{RN9,
   author  = {Gleeson, Colin Patrick and Lowe, Robert},
-  title   = {Meta-analysis of European Heat Pump Field Trial Efficiencies},
+  title   = {Meta-analysis of {European} Heat Pump Field Trial Efficiencies},
   journal = {Energy and Buildings},
   year    = {2013},
   volume  = {66},
@@ -2840,7 +2840,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{RN16,
   author  = {Kim, Hyojin and Haberl, Jeff},
-  title   = {Field-test of the {ASHRAE/CIBSE/USGBC} Performance Measurement Protocols: Part Ii Advanced Level Energy Protocols},
+  title   = {Field-test of the {ASHRAE/CIBSE/USGBC} Performance Measurement Protocols: {Part II} Advanced Level Energy Protocols},
   journal = {Science and Technology for the Built Environment},
   year    = {2018},
   volume  = {24},
@@ -2906,7 +2906,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{RN22,
   author  = {Madani, Hatef and Claesson, Joachim and Lundqvist, Per},
-  title   = {Capacity Control in Ground Source Heat Pump Systems {Part II}: Comparative Analysis between On/off Controlled and Variable Capacity Systems},
+  title   = {Capacity Control in Ground Source Heat Pump Systems {Part II}: Comparative Analysis between On/Off Controlled and Variable Capacity Systems},
   journal = {International Journal of Refrigeration},
   year    = {2011},
   volume  = {34},
@@ -2965,7 +2965,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{RN28,
   author  = {Minea, Vasile and Chen, Yuxiang and Athienitis, Andreas K.},
-  title   = {Canadian Low-energy Housing: National Energy Context, and a Case Study of a Demonstration House with Focus on Its Ground-source Heat Pump},
+  title   = {Canadian Low-energy Housing: National Energy Context, and a Case Study of a Demonstration House with Focus on its Ground-source Heat Pump},
   journal = {Science and Technology for the Built Environment},
   year    = {2017},
   volume  = {23},
@@ -2998,7 +2998,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @PhdThesis{RN32,
   author     = {Puttige, Anjan Rao},
-  title      = {Improvements on Hcm Model for G-funciton Generation and Illustration of Fluid Temperature Prediction},
+  title      = {Improvements on {HCM} Model for g-funciton Generation and Illustration of Fluid Temperature Prediction},
   year       = {2016},
   type       = {Thesis},
   university = {KTH Royal Institute of Technology},
@@ -3006,7 +3006,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{RN33,
   author  = {Ruiz-Calvo, F. and Cervera-V{\'{a}}zquez, J. and Montagud, C. and Corber{\'{a}}n, J. M.},
-  title   = {Reference Data Sets for Validating and Analyzing Gshp Systems Based on an Eleven-year Operation Period},
+  title   = {Reference Data Sets for Validating and Analyzing {GSHP} Systems Based on an Eleven-year Operation Period},
   journal = {Geothermics},
   year    = {2016},
   volume  = {64},
@@ -3018,7 +3018,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 @InProceedings{RN34,
   author    = {Sakata, Takeru and Saito, Masaya and Kikuta, Koki and Omi, Yoshiki},
   title     = {A Field Measurement of the Utilizing Geothermal and External Insulated House in Winter Season with Energy and Exergy Analysis},
-  booktitle = {11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings},
+  booktitle = {{11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings}},
   type      = {Conference Proceedings},
 }
 
@@ -3079,7 +3079,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{RN48,
   author  = {Urchuegu{\'{i}}a, J. F. and Zacar{\'{e}}s, M. and Corber{\'{a}}n, J. M. and Montero, {{\'{A}}} and Martos, J. and Witte, H.},
-  title   = {Comparison between the Energy Performance of a Ground Coupled Water to Water Heat Pump System and an Air to Water Heat Pump System for Heating and Cooling in Typical Conditions of the European Mediterranean Coast},
+  title   = {Comparison between the Energy Performance of a Ground Coupled Water to Water Heat Pump System and an Air to Water Heat Pump System for Heating and Cooling in Typical Conditions of the {European} Mediterranean Coast},
   journal = {Energy Conversion and Management},
   year    = {2008},
   volume  = {49},
@@ -3105,7 +3105,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{RN42,
   author  = {Wemhoener, Carsten and Afjei, Thomas and Dott, Ralf},
-  title   = {{IEA HPP Annex 28 - Standardised} Testing and Seasonal Performance Calculation for Multifunctional Heat Pump Systems},
+  title   = {{IEA HPP Annex 28 - Standardized} Testing and Seasonal Performance Calculation for Multifunctional Heat Pump Systems},
   journal = {Applied Thermal Engineering},
   year    = {2008},
   volume  = {28},
@@ -3129,7 +3129,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @InProceedings{RN44,
   author    = {Winger, Simon and Kalz, Doreen and Sonntag, Martin and Vellei, Marika},
-  title     = {Energy and Efficiency Analysis of Heat Pump Systems in Nonresidential Buildings by Means of Long-term Measurements},
+  title     = {Energy and Efficiency Analysis of Heat Pump Systems in Nonresidential Buildings by means of Long-term Measurements},
   booktitle = {11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings},
   type      = {Conference Proceedings},
 }
@@ -3212,7 +3212,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   number   = {12},
   pages    = {3618--3626},
   issn     = {0378-7788},
-  abstract = {GeoCool plant was the result of a EU project whose main purpose was to adapt ground coupled heat pump technology to cooling dominated areas. The execution of this experimental plant was completed at the end of year 2004, starting on February 2005 the regular operation of the air conditioning system. Since then, GeoCool facility has been monitored by a network of sensors characterizing its most relevant parameters. Several aspects of the performance and behaviour of the system during its first operational year were presented on a previous paper. This paper presents the energy performance measurements of GeoCool ground coupled heat pump system acquired during five years of operation as well as the evolution of the return water temperature from the ground as a representative of the ground temperature. The analysis of the experimental results shows that the system energy performance is maintained through the years with no appreciable impact on ground thermal response.},
+  abstract = {GeoCool plant was the result of a EU project whose main purpose was to adapt ground coupled heat pump technology to cooling dominated areas. The execution of this experimental plant was completed at the end of year 2004, starting on February 2005 the regular operation of the air conditioning system. Since then, GeoCool facility has been monitored by a network of sensors characterizing its most relevant parameters. Several aspects of the performance and behavior of the system during its first operational year were presented on a previous paper. This paper presents the energy performance measurements of GeoCool ground coupled heat pump system acquired during five years of operation as well as the evolution of the return water temperature from the ground as a representative of the ground temperature. The analysis of the experimental results shows that the system energy performance is maintained through the years with no appreciable impact on ground thermal response.},
   doi      = {https://doi.org/10.1016/j.enbuild.2011.09.036},
   keywords = {Heating and cooling systems, Ground coupled heat pump, Energy efficiency},
   type     = {Journal Article},
