--- a/References.bib
+++ b/References.bib
@@ -1221,7 +1221,7 @@
 
 @Book{Rauwendaal1986,
   title     = {Polymer Extrusion},
-  publisher = {Hansen Publishers},
+  publisher = {Hanser Publishers},
   year      = {1986},
   author    = {Rauwendaal, C.},
 }
