--- a/References.bib
+++ b/References.bib
@@ -3260,4 +3260,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url      = {http://www.sciencedirect.com/science/article/pii/S0378778817337544},
 }
 
+@Article{GoogleNgrams,
+  author       = {Google},
+  title        = {{Google Books Ngrams Viewer}},
+  year         = {2018},
+  howpublished = {Electronic},
+  url          = {http://books.google.com/ngrams},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
