--- a/References.bib
+++ b/References.bib
@@ -375,12 +375,11 @@
 }
 
 @PhdThesis{Elmahdy1975,
-  author    = {Elmahdy, A. H.},
-  title     = {Analytical and Experimental Multi-row Finned-tube Heat Exchanger Performance during Cooling and Dehumidifying Processes},
-  year      = {1975},
-  address   = {Ottawa, Canada},
-  publisher = {Carleton University},
-  volume    = {Ph.D.},
+  author  = {Elmahdy, A. H.},
+  title   = {Analytical and Experimental Multi-row Finned-tube Heat Exchanger Performance during Cooling and Dehumidifying Processes},
+  school  = {Carleton University},
+  year    = {1975},
+  address = {Ottawa, Canada},
 }
 
 @TechReport{Elmahdy1978,
@@ -3266,6 +3265,14 @@ In 1996, a US federal agency began developing a new building energy simulation t
   year         = {2018},
   howpublished = {Electronic},
   url          = {http://books.google.com/ngrams},
+}
+
+@PhdThesis{Cullin2014,
+  author  = {James R. Cullin},
+  title   = {Advancements in the Simulation of Ground Source Heat Pumps},
+  school  = {Oklahoma State University},
+  year    = {2014},
+  address = {Stillwater, OK},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
