--- a/References.bib
+++ b/References.bib
@@ -3275,4 +3275,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
   address = {Stillwater, OK},
 }
 
+@Article{DOEWeatherData,
+  author       = {DOE},
+  title        = {{Weather Data}},
+  year         = {2018},
+  howpublished = {Electronic},
+  url          = {https://energyplus.net/weather},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
