--- a/References.bib
+++ b/References.bib
@@ -3283,4 +3283,15 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url          = {https://energyplus.net/weather},
 }
 
+@Article{NSGA2,
+  author  = {K. Deb and A. Pratap and S. Agarwal and T. Meyarivan},
+  title   = {A fast and elitist multiobjective genetic algorithm: {NSGA-II}},
+  journal = {IEEE Transactions on Evolutionary Computation},
+  year    = {2002},
+  volume  = {6},
+  number  = {2},
+  pages   = {182--197},
+  doi     = {10.1109/4235.996017},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
