--- a/References.bib
+++ b/References.bib
@@ -162,7 +162,7 @@
   year      = {2010},
   author    = {Cengel, Yunus A. and Cimbala, John M.},
   address   = {New York, NY},
-  edition   = {Second},
+  edition   = {2\textsuperscript{nd}},
 }
 
 @Book{Cengel2011,
@@ -687,11 +687,12 @@
 }
 
 @Book{Holman1984,
-  title     = {Experimental Methods for Engineers Fourth Edition},
+  title     = {Experimental Methods for Engineers},
   publisher = {McGraw-Hill},
   year      = {1984},
   author    = {Holman, J. P. and Gajda Jr, W. J.},
   address   = {New York, NY},
+  edition   = {4\textsuperscript{th}}
 }
 
 @Article{Hondzo1993,
@@ -710,7 +711,7 @@
   year      = {2007},
   author    = {Incropera, Frank P. and Dewitt, David P. and Bergman, Theodore L. and Lavine, Adrienne S.},
   address   = {New York, NY},
-  edition   = {Sixth},
+  edition   = {6\textsuperscript{th}},
 }
 
 @Article{Iso1977,
@@ -821,11 +822,12 @@
 }
 
 @Book{Kays2005,
-  title     = {Convective Heat and Mass Transfer 4\textsuperscript{th} Edition},
+  title     = {Convective Heat and Mass Transfer},
   publisher = {McGraw-Hill},
   year      = {2005},
   author    = {Kays, William and Crawford, Michael and Weigand, Bernhard},
   address   = {New York, NY},
+  edition   = {4\textsuperscript{th}}
 }
 
 @InProceedings{Keens1977,
@@ -996,7 +998,7 @@
   year      = {2005},
   author    = {McQuiston, Faye C. and Parker, Jerald D. and Spitler, Jeffrey D.},
   address   = {New York, NY},
-  edition   = {Sixth},
+  edition   = {6\textsuperscript{th}},
 }
 
 @Article{Mescher2009,
@@ -1413,7 +1415,7 @@
   year      = {1997},
   author    = {John Robert Taylor},
   editor    = {Ann McGuire},
-  edition   = {Second},
+  edition   = {2\textsuperscript{nd}},
 }
 
 @TechReport{Thornton2008,
@@ -1494,7 +1496,7 @@
   author    = {Yang, Yong},
   editor    = {Mark, James E.},
   address   = {New York, NY},
-  edition   = {Second},
+  edition   = {2\textsuperscript{nd}},
 }
 
 @Article{Yik2001,
@@ -3292,6 +3294,15 @@ In 1996, a US federal agency began developing a new building energy simulation t
   number  = {2},
   pages   = {182--197},
   doi     = {10.1109/4235.996017},
+}
+
+@Book{Honderich2005,
+  title     = {The Oxford Companion to Philosophy},
+  publisher = {Oxford University Press},
+  year      = {2005},
+  author    = {Ted Honderich},
+  address   = {Oxford, UK},
+  edition   = {2\textsuperscript{nd}},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
